--- a/view/frontend/templates/component/daily_deal_teaser.phtml
+++ b/view/frontend/templates/component/daily_deal_teaser.phtml
@@ -12,7 +12,6 @@ $layout = $this->getLayout();
 $componentClasses = $block->getSkipSpacing() ? ' cs-daily-deal-teaser--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('daily_deal_teaser/additional_css_classes');
 
-$jsSettings = json_encode($block->getVar('daily_deal_teaser/js') ?: '{}');
 ?>
 
 <?php if (!empty($product) && $product['productObject']->getIsSalable()): ?>
@@ -20,7 +19,7 @@ $jsSettings = json_encode($block->getVar('daily_deal_teaser/js') ?: '{}');
 
     <div class="cs-container cs-container--daily-deal-teaser<?= $visibility ? ' ' .$visibility : ''; ?>">
         <div class="cs-container__inner">
-            <div class="cs-daily-deal-teaser<?= $componentClasses ?>" data-mage-init='{ "ccDailyDealTeaser": <?= $jsSettings ?> }'>
+            <div class="cs-daily-deal-teaser<?= $componentClasses ?>">
                 <aside class="cs-daily-deal-teaser__aside-image">
                         <?= $layout
                             ->createBlock(\MageSuite\ContentConstructorFrontend\Block\Component\DailyDealTeaser::class)
