- feat: [HAAR-2448] introduces pagination view model allowing getting information about current page being viewed in category.products.list and category.teasers blocks

--- a/view/frontend/layout/catalog_category_view.xml
+++ b/view/frontend/layout/catalog_category_view.xml
@@ -14,9 +14,16 @@
                         <argument name="html_tag" xsi:type="string">li</argument>
                         <argument name="grid_class" xsi:type="string">cs-grid-layout</argument>
                         <argument name="brick_class" xsi:type="string">cs-grid-layout__brick</argument>
+                        <argument name="pagination_view_model" xsi:type="object">MageSuite\ContentConstructorFrontend\ViewModel\PaginationViewModel</argument>
                     </arguments>
                 </block>
             </container>
+        </referenceBlock>
+
+        <referenceBlock name="category.products.list">
+            <arguments>
+                <argument name="pagination_view_model" xsi:type="object">MageSuite\ContentConstructorFrontend\ViewModel\PaginationViewModel</argument>
+            </arguments>
         </referenceBlock>
     </body>
 </page>
