--- a/view/frontend/templates/product/list/category-teasers.phtml
+++ b/view/frontend/templates/product/list/category-teasers.phtml
@@ -1,20 +1,21 @@
-<?php 
+<?php
     /**
      * Product grid teasers template (POP)
      *
-     * If a teaser is using old setup, render old teaser template 
-     * else render using new image-teaser component 
-     * (additional settings are set before passing it to image-teaser: 
+     * If a teaser is using old setup, render old teaser template
+     * else render using new image-teaser component
+     * (additional settings are set before passing it to image-teaser:
      * required for image-teaser component and responsible for positioning in grid)
      *
      * @var $block \Magento\Catalog\Block\Product\ListProduct
+     * @var $paginationViewModel \MageSuite\ContentConstructorFrontend\ViewModel\PaginationViewModel
      */
 ?>
 <?php
+$paginationViewModel = $block->getPaginationViewModel();
 $teasersConfig = $this->helper('MageSuite\ContentConstructorFrontend\Helper\CategoryGridTeasers')->getConfig();
-
 if ($teasersConfig): ?>
-    <?php $i = 1 ?> 
+    <?php $i = 1 ?>
 
     <?php foreach ($teasersConfig['teasers'] as $teaser): ?>
 
@@ -29,7 +30,7 @@ if ($teasersConfig): ?>
                 ->setTemplate('MageSuite_ContentConstructorFrontend::teaser.phtml')
                 ->toHtml(); ?>
         <?php else: ?>
-            <?php 
+            <?php
             $newTeaserConfig = array(
                 "scenario" => array(
                     'desktopLayout' => array(
