--- a/view/frontend/templates/component/image_teaser/slide_elements/contrast_gradient.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/contrast_gradient.phtml
@@ -2,7 +2,7 @@
 $imageTeaserData = $block->getImageTeaserData();
 $slide = $block->getSlide();
 $contrastOptimizers = $slide->getOptimizers();
-$contrastOptimizersScenarios = $contrastOptimizers['scenarios'];
+$contrastOptimizersScenarios = $contrastOptimizers['scenarios'] ?? null;
 $gradient = $contrastOptimizersScenarios['gradient'] ?? null;
 ?>
 <?php if (isset($gradient['enabled']) && $gradient['enabled']): ?>
