--- a/view/frontend/templates/component/image_teaser/slide_elements/contrast_container.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/contrast_container.phtml
@@ -2,7 +2,7 @@
 $imageTeaserData = $block->getImageTeaserData();
 $slide = $block->getSlide();
 $contrastOptimizers = $slide->getOptimizers();
-$contrastOptimizersScenarios = $contrastOptimizers['scenarios'];
+$contrastOptimizersScenarios = $contrastOptimizers['scenarios'] ?? null;
 $container = $contrastOptimizersScenarios['container'] ?? null;
 ?>
 <?php if (isset($container['enabled']) && $container['enabled']): ?>
