--- a/view/frontend/templates/component/image_teaser/slide_elements/contrast_overlay.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/contrast_overlay.phtml
@@ -2,7 +2,7 @@
 $imageTeaserData = $block->getImageTeaserData();
 $slide = $block->getSlide();
 $contrastOptimizers = $slide->getOptimizers();
-$contrastOptimizersScenarios = $contrastOptimizers['scenarios'];
+$contrastOptimizersScenarios = $contrastOptimizers['scenarios'] ?? null;
 $overlay = $contrastOptimizersScenarios['overlay'] ?? null;
 ?>
 <?php if (isset($overlay['enabled']) && $overlay['enabled']): ?>
